--- a/signup.css
+++ b/signup.css
@@ -1,21 +1,36 @@
-
 * {
   font-family: sans-serif;
-
 }
+
 /* **********************8********** css for signup page********************************** */
 .box {
   width: 500px;
   height: 470px;
 
   margin: auto;
-
+}
+body > div {
+  padding: 35px;
 }
 
+#admin {
+  position: fixed;
+  cursor: pointer;
+  bottom: 10px;
+  top: 10px;
+  max-height: 30px;
+  padding: 5px;
+  color: rgb(255, 255, 255);
+  background-color: teal;
+  border: 0px;
+  border-radius: 5px;
+}
+#admin:hover {
+  background-color: #faa619;
+}
 .form {
-  width: 210px;
+  width: 40%;
   height: 400px;
-
   margin: auto;
   margin-left: 80px;
   font-size: 20px;
@@ -34,22 +49,25 @@
   padding-left: 5px;
   align-items: center;
 }
-.box>h1{
+.box > h1 {
   color: #faa619;
 }
 
 #name,
 #email,
 #pass {
+  padding: 5px;
+  width: 30rem;
   height: 40px;
-  width: 500px;
   border-radius: 3px;
   border: 2px solid lightgray;
 }
 
 #pass + input {
   height: 40px;
-  width: 508px;
+  margin: auto;
+  width: 500px;
+  margin-bottom: 20px;
   border-radius: 3px;
   background-color: #faa619;
   color: white;
@@ -81,22 +99,21 @@
 }
 
 .goo {
-    height: 40px;
-    width: 506px;
-    border-radius: 3px;
+  height: 40px;
+  width: 495px;
+  border-radius: 3px;
   margin-bottom: 25px;
   font-size: 20px;
   background-color: white;
   line-height: 1.8;
   border: 2px solid lightgray;
   display: flex;
-  margin: auto;
-  
-
+  margin-top: 50px;
 }
-.head > img {
+.head > a > img {
   width: 100%;
-  padding-left: 280px;
+  margin: auto;
+  margin-left: 68%;
   margin-top: 30px;
   height: 100%;
 }
@@ -121,16 +138,16 @@
 .required {
   color: red;
 }
-body>div{
+body > div {
   height: 740px;
   margin: auto;
   width: 560px;
-  
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;
+
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 7px;
 }
-::placeholder{
-  color: rgb(212, 212, 212)
+::placeholder {
+  color: rgb(212, 212, 212);
 }
 
 /* *********************************css for login page************************************************************* */
